# node-startup-controller

./: .gitignore  AUTHORS  CODING_STYLE  COPYING  COPYING.docs  HACKING  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
boot-manager/: Makefile.am  boot-manager-application.c  boot-manager-application.h  boot-manager-command-line.c  boot-manager-command-line.h  boot-manager-service.c  boot-manager-service.h  boot-manager.service.in  glib-extensions.c  glib-extensions.h  job-manager.c  job-manager.h  la-handler-dbus.xml  la-handler-service.c  la-handler-service.h  luc-starter.c  luc-starter.h  main.c  org.genivi.BootManager1.service.in  shutdown-consumer-dbus.xml  shutdown-consumer-service.c  shutdown-consumer-service.h  systemd-manager-dbus.xml  target-startup-monitor.c  target-startup-monitor.h  watchdog-client.c
boot-manager/busconf/: Makefile.am
boot-manager/dbus/: Makefile.am  org.genivi.BootManager1.service.in
boot-manager/systemd/: Makefile.am
common/: Makefile.am  boot-manager-dbus.xml  glib-extensions.c  glib-extensions.h  la-handler-dbus.xml  nsm-consumer-dbus.xml  nsm-enum-types.c  nsm-enum-types.h  nsm-lifecycle-control-dbus.xml  shutdown-client.c  shutdown-client.h  shutdown-consumer-dbus.xml  shutdown-consumer-service.c  watchdog-client.c  watchdog-client.h
docs/: Makefile.am
docs/reference/: Makefile.am
docs/reference/node-startup-controller/: Makefile.am  about.xml  building.xml  functional-scope.xml  legacy-app-handler.xml  node-startup-controller-docs.xml  public-interfaces.xml  software-architecture.xml  test-example.xml  test-general-setup.xml  test-legacy-app-handling.xml  test-luc-management.xml  test-luc.xml  test-nsm-dummy.xml  test-target-startup-monitoring.xml  test-test-environment-setup.xml  test-tsm.xml
legacy-app-handler/: Makefile.am  la-handler-application.c  la-handler-application.h  la-handler-dbus.xml  la-handler-service.c  la-handler-service.h  main.c  org.genivi.LAHandler1.service  org.genivi.LAHandler1.service.in  org.genivi.LegacyAppHandler1.conf  org.genivi.LegacyAppHandler1.service.in
legacy-app-handler/dbus/: Makefile.am  org.genivi.LegacyAppHandler1.service.in
legacy-app-handler/systemd/: Makefile.am  org.genivi.LegacyAppHandler1.service.in
luc-handler/: Makefile.am  luc-handler-application.c  luc-handler-application.h  luc-handler-dbus.xml  luc-handler-service.c  luc-handler-service.h  main.c  org.genivi.LUCHandler1.gschema.xml.in  org.genivi.LUCHandler1.service.in
node-startup-controller/: Makefile.am  boot-manager-application.c  boot-manager-application.h  boot-manager-dbus.xml  boot-manager-service.c  boot-manager-service.h  glib-extensions.c  glib-extensions.h  job-manager.c  job-manager.h  la-handler-service.c  la-handler-service.h  luc-starter.c  luc-starter.h  main.c  node-startup-controller-application.c  node-startup-controller-application.h  node-startup-controller-dbus.xml  node-startup-controller-service.c  node-startup-controller-service.h  node-startup-controller.service.in  org.genivi.BootManager1.service.in  org.genivi.NodeStartupController1.service.in  systemd-manager-dbus.xml  systemd-unit-dbus.xml  target-startup-monitor.c  target-startup-monitor.h
node-startup-controller/busconf/: Makefile.am  org.genivi.BootManager1.conf  org.genivi.NodeStartupController1.conf
nsm-dummy/: Makefile.am  com.contiautomotive.NodeStateManager.Consumer.service.in  com.contiautomotive.NodeStateManager.LifecycleControl.service.in  main.c  nsm-consumer-service.c  nsm-consumer-service.h  nsm-dummy-application.c  nsm-dummy-application.h  nsm-dummy.service.in  nsm-lifecycle-control-service.c  nsm-lifecycle-control-service.h  org.genivi.NodeStateManager.Consumer.service.in
nsm-dummy/busconf/: Makefile.am  com.conti.NodeStateManager.conf  com.contiautomotive.NodeStateManager.conf  org.genivi.NodeStateManager.conf
nsm-dummy/dbus/: Makefile.am  com.conti.NodeStateManager.service.in  com.contiautomotive.NodeStateManager.Consumer.service.in  com.contiautomotive.NodeStateManager.service.in
nsm-dummy/systemd/: Makefile.am  com.conti.NodeStateManager.service.in  com.contiautomotive.NodeStateManager.service.in  nsm-dummy.service.in
tests/: Makefile.am
tests/boot-manager/: Makefile.am  gvariant_writer.c  test-luc-handler
tests/legacy-app-handler/: Makefile.am  legacy-app-handler-test  legacy-app-handler-test1.service.in  legacy-app-handler-test2.service.in  legacy-app-handler-test3.service.in  org-genivi-LegacyAppHandler1-test-service.py  org.genivi.LegacyAppHandler1.test.conf  org.genivi.LegacyAppHandler1.test1.service.in  org.genivi.LegacyAppHandler1.test2.service.in  org.genivi.LegacyAppHandler1.test3.service.in
tests/luc-handler/: Makefile.am  test-luc-handler
tests/node-startup-controller/: Makefile.am  gvariant-writer.c  test-luc-handler
